fix #2508 update gc logging settings